# Qt_course

./: .gitignore  CMakeLists.txt  Qt.cpp  app.cpp  app.h  app.ui  app.ui.autosave  cipter.cpp  main.cpp  test.cpp  widget.cpp  widget.h
